# optik

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENCE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black.yml  ci.yml  docker.yml  python-package.yml
optik/common/: abi.py  exceptions.py  logger.py  util.py  utils.py  world.py
optik/corpus/: __init__.py  __main__.py  generator.py
optik/coverage/: __init__.py  bifurcation.py  coverage.py  inst_coverage.py  path_coverage.py
optik/dataflow/: dataflow.py
optik/echidna/: __init__.py  __main__.py  display.py  interface.py  runner.py
palantir/: __main__.py  abi.py
palantir/common/: abi.py  exceptions.py  logger.py  world.py
palantir/coverage/: bifurcation.py  inst_coverage.py
palantir/echidna/: __main__.py  interface.py  runner.py
tests/contracts/: CoverageArrayOfTuple.sol  CoverageBool.sol  CoverageBytes.sol  CoverageBytesM.sol  CoverageDynamicArray.sol  CoverageDynamicTuple1.sol  CoverageDynamicTuple2.sol  CoverageDynamicTuple3.sol  CoverageFixedArray.sol  CoverageInt.sol  CoverageNestedArrays1.sol  CoverageNestedArrays2.sol  CoverageNestedArrays3.sol  CoverageNestedTuple.sol  CoverageStaticTuple.sol  CoverageString.sol  CreateContracts.sol  CreateContracts2.sol  ExploreMe.sol  IntCast.sol  MessageCall.sol  MultiMagic.sol  MultiMagic256.sol  Payable.sol  Primality.sol  Reentrency.sol  SmartianExample.sol  Time.sol
tests/echidna/: common.py  test_coverage.py
