[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "optik-tools"
dynamic = ["version", "readme"]
dependencies = [
    "setuptools>=45",
    "wheel",
    "pymaat>=0.6.6",
    "eth_abi",
    "pysha3",
    "rlp",
    "crytic-compile",
    "slither-analyzer",
    "solc-select"
]
requires-python = ">=3.7"

[tool.setuptools.dynamic]
version = {file = "Version.txt"}
readme = {file = ["README.md"]}

[tool.black]
target-version = ['py37']
line-length = 80

[tool.pylint.messages_control]
disable = """
missing-module-docstring,
missing-class-docstring,
missing-function-docstring,
invalid-name
"""


[project.scripts]
"hybrid-echidna" = "optik.echidna.__main__:main"
"feed-echidna" = "optik.corpus.__main__:main"
