[metadata]
name = optik-tools
author = Trail of Bits
description = Symbolic execution toolkit for Ethereum smart-contracts
version = file: Version.txt
long_description = file: README.md
long_description_content_type = text/markdown
licence = AGPL

[options]
python_requires = >=3.7

[options.extras_require]
tests = 
    pytest
lint =
    black~=22.0